--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Invers/index.html" >Inversul unui numar citit din javascript</a>
-    <br>
-    <a href="CitireDinWasm/index.html" >Citirea si suma a 3 numere cu o functie din javascript, apelata din wasm</a>
+    <div>
+        <h3>
+            <a href="Invers/index.html" >Inversul unui numar citit din javascript si dat ca argument unei functii wasm</a>
+            <br><br>
+            <a href="CitireDinWasm/index.html" >Citirea si suma a 3 numere cu o functie din javascript, apelata din wasm</a>
+            <br><br>
+            <a href="ArrayMax/index.html" >Maximul elementelor dintr-un vector citit de la tastatura, citita folosind functii din JS, apelate din webasm</a>
+            </h3>
+    </div>
 </body>
 </html>
