--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <br><br>
             <a href="ArrayMax/index.html" >Maximul elementelor dintr-un vector citit de la tastatura, citita folosind functii din JS, apelate din webasm</a>
             </h3>
+            <br><br>
+            <a href="ToUpper/index.html" >Citirea unui string din javascript, pasarea lui la webassemly care face toate literele sa fie litere mari, apoi din javascript se citeste stringul modificat si se afiseaza</a>
+            </h3>
     </div>
 </body>
 </html>
