--- a/CitireDinWasm/index.html
+++ b/CitireDinWasm/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>
+        Daca nu a aparut un pop-up, ceva nu-i bine
+    </h2>
     <script src="index.js"></script>
 </body>
 </html>
