--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         Se citeste un string din javascript, apoi se scrie in memoria accesibila programului webassembly. Acesta proceseaza informatia, dupa care apeleaza o functie javascript pentru a afisa in consola.
         </h3>
         
+        <h2>
+        <a href="Vector Memory/main.html" >vector Memory</a>
+        </h2>
 
     </div>
 </body>
